--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
           </div>
-          <div class="carousel-item active border rounded bg- p-5">
+          <div class="carousel-item active border rounded bg-info p-5">
             <div class="row">
               <div class="col-lg-7 d-flex align-items-center p-5">
                 <div>
@@ -156,6 +156,94 @@
       </div>
     </section>
     <!-- catagories end -->
+    <!-- shoes section start -->
+    <section class="container">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card border border-0 shadow-lg h-100">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Supplay Shoes</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="m-3">
+              <div class="btn btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class=" card border border-0 shadow-lg h-100">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Naike 360</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class=" m-3">
+              <div class="btn btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class=" card border border-0 shadow-lg h-100">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Airmax</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="m-3">
+              <div class="btn btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+     <!-- shoes section end-->
+
+     <!-- Bagpack Section start -->
+    <section class="container">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card border border-0 shadow-lg h-100">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Laltu Bag</h5>
+              <h2>$160</h2>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="m-3">
+              <div class="btn btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class=" card border border-0 shadow-lg h-100">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Balack Bag</h5>
+              <h2>$160</h2>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class=" m-3">
+              <div class="btn btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class=" card border border-0 shadow-lg h-100">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Airmax</h5>
+              <h2>$160</h2>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="m-3">
+              <div class="btn btn-warning">Buy Now</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+     <!-- Bagpack Section end -->
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 
