--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
     </section>
     <!-- catagories end -->
     <!-- shoes section start -->
-    <section class="container">
+    <section class="container my-5">
+      <h2>Shoes</h2>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
           <div class="card border border-0 shadow-lg h-100">
@@ -198,15 +199,15 @@
       </div>
     </section>
      <!-- shoes section end-->
-
-     <!-- Bagpack Section start -->
-    <section class="container">
+     <!-- Backpack section start -->
+     <section class="container my-5">
+      <h2>Bagpack</h2>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
           <div class="card border border-0 shadow-lg h-100">
-            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <img src="images/Bags/Bag-2.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Red Laltu Bag</h5>
+              <h5 class="card-title">Red lal Bag</h5>
               <h2>$160</h2>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -217,9 +218,9 @@
         </div>
         <div class="col">
           <div class=" card border border-0 shadow-lg h-100">
-            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <img src="images/Bags/Bag-2.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Balack Bag</h5>
+              <h5 class="card-title">Bag Nice</h5>
               <h2>$160</h2>
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
@@ -230,7 +231,7 @@
         </div>
         <div class="col">
           <div class=" card border border-0 shadow-lg h-100">
-            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <img src="images/Bags/Bag-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Red Airmax</h5>
               <h2>$160</h2>
@@ -243,7 +244,7 @@
         </div>
       </div>
     </section>
-     <!-- Bagpack Section end -->
+     <!-- Backpack section end  -->
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 
