--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Panda Commerce</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+  <!-- custom css -->
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -43,7 +45,7 @@
     <section class="mt-5">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active border rounded bg-info p-5">
+          <div class="carousel-item active border rounded panda-bg-info p-5">
             <div class="row">
               <div class="col-lg-7 d-flex align-items-center p-5">
                 <div>
@@ -51,7 +53,7 @@
                   <p>This is the headpone in the workd for people who just want to waste time in front of funky workd.
                   </p>
                   <h1>$420</h1>
-                  <div class="btn btn-warning">Buy Now</div>
+                  <div class="btn panda-btn-buy-now">Buy Now</div>
 
                 </div>
               </div>
@@ -65,7 +67,7 @@
             </div>
 
           </div>
-          <div class="carousel-item active border rounded bg-info p-5">
+          <div class="carousel-item active border rounded panda-bg-info p-5">
             <div class="row">
               <div class="col-lg-7 d-flex align-items-center p-5">
                 <div>
@@ -73,7 +75,7 @@
                   <p>This is the best tv in the world for people who just wabt to waste tne in front of tv.
                   </p>
                   <h1>$1200</h1>
-                  <div class="btn btn-warning">Buy Now</div>
+                  <div class="btn panda-btn-buy-now">Buy Now</div>
 
                 </div>
               </div>
@@ -87,7 +89,7 @@
             </div>
 
           </div>
-          <div class="carousel-item active border rounded bg-info p-5">
+          <div class="carousel-item active border rounded panda-bg-info p-5">
             <div class="row">
               <div class="col-lg-7 d-flex align-items-center ">
                 <div>
@@ -95,7 +97,7 @@
                   <p>This is the bes x-box in the workd for peole who just to waste time in front of fake sports.
                   </p>
                   <h1>$600</h1>
-                  <div class="btn btn-warning">Buy Now</div>
+                  <div class="btn panda-btn-buy-now">Buy Now</div>
 
                 </div>
               </div>
@@ -127,7 +129,7 @@
     <!-- categories start -->
     <section>
       <div class="container text-center my-5">
-        <div class="row g-2">
+        <div class="row g-2 catetgory">
           <!-- single catetgory -->
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-center">
@@ -168,7 +170,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
             <div class="m-3">
-              <div class="btn btn-warning">Buy Now</div>
+              <div class="btn panda-btn-buy-now">Buy Now</div>
             </div>
           </div>
         </div>
@@ -180,7 +182,7 @@
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
             <div class=" m-3">
-              <div class="btn btn-warning">Buy Now</div>
+              <div class="btn panda-btn-buy-now">Buy Now</div>
             </div>
           </div>
         </div>
@@ -192,7 +194,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="m-3">
-              <div class="btn btn-warning">Buy Now</div>
+              <div class="btn panda-btn-buy-now">Buy Now</div>
             </div>
           </div>
         </div>
@@ -212,7 +214,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
             <div class="m-3">
-              <div class="btn btn-warning">Buy Now</div>
+              <div class="btn panda-btn-buy-now">Buy Now</div>
             </div>
           </div>
         </div>
@@ -225,7 +227,7 @@
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
             <div class=" m-3">
-              <div class="btn btn-warning">Buy Now</div>
+              <div class="btn panda-btn-buy-now">Buy Now</div>
             </div>
           </div>
         </div>
@@ -238,7 +240,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="m-3">
-              <div class="btn btn-warning">Buy Now</div>
+              <div class="btn panda-btn-buy-now">Buy Now</div>
             </div>
           </div>
         </div>
